--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -8,6 +8,14 @@
   ufw: rule=deny src={{ item }} insert=2
   with_items: firewall_blacklisted_hosts
 
+- name: SHELL | Get SSHD port
+  shell: netstat -nlpt | awk '$NF ~ /sshd$/ && /^tcp / { print $4 }' | cut -d ':' -f 2
+  register: sshd_port
+  changed_when: false
+
+- name: UFW | Allow current SSH port
+  ufw: rule=allow proto=tcp port={{ sshd_port.stdout }}
+
 - name: UFW | Allow TCP ports
   ufw: rule=allow proto=tcp port={{ item }}
   with_items: firewall_open_tcp_ports
