Working on fail2ban (not ready yet)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,4 @@ firewall_logging: 'low'
 firewall_kernel_modules: []
 firewall_enable_ipv6: true
 firewall_reset: false
+firewall_use_fail2ban: false
