--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,9 +13,6 @@
 - name: INCLUDE | Firewall
   include: firewall.yml
 
-- name: UFW | Enable firewall
-  ufw: state=enabled
-
-- name: | Include | Fail2ban
+- name: INCLUDE | Fail2ban
   include: fail2ban.yml
   when: firewall_use_fail2ban
