--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,5 +7,9 @@
         port: '6379'
         policy: 'allow'
         host: '10.5.0.0/16'
+    firewall_use_fail2ban: true
+    firewall_whitelisted_hosts:
+      - '10.20.30.40'
+      - '192.168.0.0/24'
   roles:
     - ../../
