--- a/tasks/fail2ban.yml
+++ b/tasks/fail2ban.yml
@@ -13,4 +13,6 @@
 - name: TEMPLATE | Deploy UFW integration on Fail2ban on Wheezy
   template: src=etc/fail2ban/action.d/ufw.conf.j2 dest=/etc/fail2ban/action.d/ufw.conf
   notify: restart fail2ban
-  when: "{{ ansible_distribution_major_version | version_compare('8.0', 'lt') }}"
+  when: >
+    (ansible_distribution == "Debian" and ansible_distribution_major_version | version_compare('8.0', 'lt')) or
+    (ansible_distribution == "Ubuntu" and ansible_distribution_major_version | version_compare('14', 'le'))
