--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ galaxy_info:
   description: Simple firewall for Debian/Ubuntu (with UFW/fail2ban)
   company:
   license: GPLv2
-  min_ansible_version: 1.6
+  min_ansible_version: 2.0
   platforms:
   - name: Ubuntu
     versions:
@@ -12,8 +12,13 @@ galaxy_info:
   - name: Debian
     versions:
     - all
-  categories:
+  galaxy_tags:
   - networking
   - system
+  - firewall
+  - iptables
+  - ufw
+  - security
+  - fail2ban
 dependencies: []
 
