Fail2ban global configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,13 @@ firewall_reset: false
 # Fail2ban
 #
 firewall_use_fail2ban: false
+
+# Global configuration
+firewall_fail2ban_loglevel: null
+firewall_fail2ban_logtarget: null
+firewall_fail2ban_socket: null
+firewall_fail2ban_pidfile: null
+
 firewall_fail2ban_bantime: '3600'
 firewall_fail2ban_maxretry: '4'
 firewall_fail2ban_destemail: 'root@localhost'
