Drop fail2ban support (closes #5)

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: Emilien Mantel
-  description: Simple firewall for Debian/Ubuntu (with UFW/fail2ban)
+  description: Simple firewall for Debian/Ubuntu
   company:
   license: GPLv2
   min_ansible_version: 2.0
@@ -19,6 +19,5 @@ galaxy_info:
   - iptables
   - ufw
   - security
-  - fail2ban
 dependencies: []
 
