--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,14 @@
 ---
 
 - name: APT | Install ufw
-  apt: pkg=ufw update_cache=yes cache_valid_time=3600
+  apt:
+    pkg: ufw
+    update_cache: yes
+    cache_valid_time: 3600
 
 - name: UFW | Reset firewall
-  ufw: state=reset
+  ufw:
+    state: reset
   when: firewall_reset
 
 - name: INCLUDE | Config
