--- a/tasks/dns.yml
+++ b/tasks/dns.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: SET_FACT | Prepare DNS
-  set_fact:
+  ansible.builtin.set_fact:
     __raw_white: |
       [
         {% for dns in firewall_whitelisted_dns %}
@@ -26,6 +26,6 @@
       ]
 
 - name: SET_FACT | DNS to real vars
-  set_fact:
+  ansible.builtin.set_fact:
     __whitelist_dns: "{{ __raw_white | from_yaml }}"
     __blacklist_dns: "{{ __raw_black | from_yaml }}"
