--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -5,15 +5,15 @@
 # =============================================================
 
 - name: UFW | Deny blacklisted hosts
-  ufw:
+  community.general.ufw:
     rule: deny
     src: "{{ item }}"
-    insert_relative_to: "{% if item | ipv6 %}first-ipv6{% else %}first-ipv4{% endif %}"
+    insert_relative_to: "{% if item | ansible.netcommon.ipv6 %}first-ipv6{% else %}first-ipv4{% endif %}"
     comment: "Ansible: blacklist"
   with_items: "{{ firewall_blacklisted_hosts }}"
 
 - name: UFW | Deny Blacklisted DNS IP4
-  ufw:
+  community.general.ufw:
     rule: deny
     src: "{{ item.1 }}"
     insert_relative_to: "first-ipv4"
@@ -21,7 +21,7 @@
   loop: "{{ __blacklist_dns | subelements('ip4') }}"
 
 - name: UFW | Deny Blacklisted DNS IP6
-  ufw:
+  community.general.ufw:
     rule: deny
     src: "{{ item.1 }}"
     insert_relative_to: "first-ipv6"
@@ -33,15 +33,15 @@
 # =============================================================
 
 - name: UFW | Allow whitelisted hosts
-  ufw:
+  community.general.ufw:
     rule: allow
     src: "{{ item }}"
-    insert_relative_to: "{% if item | ipv6 %}first-ipv6{% else %}first-ipv4{% endif %}"
+    insert_relative_to: "{% if item | ansible.netcommon.ipv6 %}first-ipv6{% else %}first-ipv4{% endif %}"
     comment: "Ansible: whitelist"
   with_items: "{{ firewall_whitelisted_hosts }}"
 
 - name: UFW | Allow Whitelisted DNS IP4
-  ufw:
+  community.general.ufw:
     rule: allow
     src: "{{ item.1 }}"
     insert_relative_to: "first-ipv4"
@@ -49,7 +49,7 @@
   loop: "{{ __whitelist_dns | subelements('ip4') }}"
 
 - name: UFW | Allow Whitelisted DNS IP6
-  ufw:
+  community.general.ufw:
     rule: allow
     src: "{{ item.1 }}"
     insert_relative_to: "first-ipv6"
@@ -61,7 +61,7 @@
 # SSH
 # =============================================================
 - name: SHELL | Get SSHD port
-  shell: set -o pipefail && ss -nlpt | awk '/"sshd"/ { print $4 }' | head -n 1 | cut -d ':' -f 2
+  ansible.builtin.shell: set -o pipefail && ss -nlpt | awk '/"sshd"/ { print $4 }' | head -n 1 | cut -d ':' -f 2
   args:
     executable: /bin/bash
   register: sshd_port
@@ -69,7 +69,7 @@
   check_mode: false
 
 - name: UFW | Allow current SSH port
-  ufw:
+  community.general.ufw:
     rule: allow
     proto: tcp
     to_port: "{{ sshd_port.stdout }}"
@@ -81,7 +81,7 @@
 # =============================================================
 
 - name: UFW | Allow TCP ports
-  ufw:
+  community.general.ufw:
     rule: allow
     proto: tcp
     to_port: "{{ item }}"
@@ -89,7 +89,7 @@
   with_items: "{{ firewall_open_tcp_ports }}"
 
 - name: UFW | Allow UDP ports
-  ufw:
+  community.general.ufw:
     rule: allow
     proto: udp
     to_port: "{{ item }}"
@@ -101,7 +101,7 @@
 # =============================================================
 
 - name: UFW | Custom rules
-  ufw:
+  community.general.ufw:
     rule: "{{ item.rule | default('allow') }}"
     proto: "{{ item.proto | default('any') }}"
     from_port: "{{ item.from_port | default(omit) }}"
@@ -116,7 +116,7 @@
 
 
 - name: UFW | Delete current SSH port if needed
-  ufw:
+  community.general.ufw:
     rule: allow
     proto: tcp
     to_port: "{{ sshd_port.stdout }}"
@@ -124,9 +124,9 @@
   when: not firewall_auto_open_ssh
 
 - name: UFW | Log level
-  ufw:
+  community.general.ufw:
     logging: "{{ firewall_logging }}"
 
 - name: UFW | Enable firewall
-  ufw:
+  community.general.ufw:
     state: enabled
